--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Application.Client.MainWindow"
+﻿<Window x:Class="Application.Client.Windows.Main.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
