* The following properties have been created in MainWindowViewModel:   * WindowTitle: Property that contains the current title of the Window.   * Content: Property that contains the input Text.   * These properties are binding to XAML.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding WindowTitle}" Height="450" Width="800">
     <Window.Resources>
 
         <ControlTemplate x:Key="MainInputTextBoxTemplate" TargetType="{x:Type TextBox}">
@@ -94,7 +94,8 @@
                      AcceptsReturn="True"
                      TextWrapping="NoWrap"
                      VerticalScrollBarVisibility="Visible"
-                     HorizontalScrollBarVisibility="Visible"/>
+                     HorizontalScrollBarVisibility="Visible"
+                     Text="{Binding Content, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </DockPanel>
     </Grid>
 </Window>
