* Created the SaveIntoNewFileCommand.   * This command execute the new file save from input text box.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -63,7 +63,7 @@
                     <MenuItem Header="_New"/>
                     <MenuItem Header="_Open..."/>
                     <MenuItem Header="_Save"/>
-                    <MenuItem Header="_Save as..."/>
+                    <MenuItem Header="_Save as..." Command="{Binding SaveIntoNewFileCommand}" />
                     <Separator/>
                     <MenuItem Header="Exit..."/>
                 </MenuItem>
