* Created the SaveFileCommand.   * This command executes the existing or new file save from input text box.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -63,7 +63,7 @@
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="File">
                     <MenuItem Header="_New"/>
                     <MenuItem Header="_Open..."/>
-                    <MenuItem Header="_Save"/>
+                    <MenuItem Header="_Save" Command="{Binding SaveFileCommand}"/>
                     <MenuItem Header="_Save as..." Command="{Binding SaveFileAsCommand}" />
                     <Separator/>
                     <MenuItem Header="Exit..."/>
