* Created the OpenFileCommand.   * This command loads the contents of the opened file into the input box.   * If the contents of the input field have not yet been saved, that it is possible to save it.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -62,7 +62,7 @@
                   DockPanel.Dock="Top">
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="File">
                     <MenuItem Header="_New"/>
-                    <MenuItem Header="_Open..."/>
+                    <MenuItem Header="_Open..." Command="{Binding OpenFileCommand}"/>
                     <MenuItem Header="_Save" Command="{Binding SaveFileCommand}"/>
                     <MenuItem Header="_Save as..." Command="{Binding SaveFileAsCommand}" />
                     <Separator/>
