* Created the NewFileCommand.   * This command free the contents of the input box and set the default values in the NotepadStorageService.   * If the contents of the input field have not yet been saved, that it is possible to save it.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -61,7 +61,7 @@
             <Menu Background="#FFFFFF"
                   DockPanel.Dock="Top">
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="File">
-                    <MenuItem Header="_New"/>
+                    <MenuItem Header="_New" Command="{Binding NewFileCommand}"/>
                     <MenuItem Header="_Open..." Command="{Binding OpenFileCommand}"/>
                     <MenuItem Header="_Save" Command="{Binding SaveFileCommand}"/>
                     <MenuItem Header="_Save as..." Command="{Binding SaveFileAsCommand}" />
