* Created the ExitCommand.   * This command close the application.   * If the contents of the input field have not yet been saved, that it is possible to save it.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -66,7 +66,7 @@
                     <MenuItem Header="_Save" Command="{Binding SaveFileCommand}"/>
                     <MenuItem Header="_Save as..." Command="{Binding SaveFileAsCommand}" />
                     <Separator/>
-                    <MenuItem Header="Exit..."/>
+                    <MenuItem Header="Exit..." Command="{Binding ExitCommand}"/>
                 </MenuItem>
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="Edit">
                     <MenuItem Header="_Redo"/>
