--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Height="450" Width="800"
@@ -56,17 +57,29 @@
         </ControlTemplate>
     </Window.Resources>
 
+    <behaviors:Interaction.Triggers>
+        <behaviors:EventTrigger EventName="Closing">
+            <behaviors:InvokeCommandAction Command="{Binding ApplicationCloseCommand}" PassEventArgsToCommand="True"/>
+        </behaviors:EventTrigger>
+    </behaviors:Interaction.Triggers>
+
     <Grid>
         <DockPanel>
-            <Menu Background="#FFFFFF"
-                  DockPanel.Dock="Top">
+            <Menu Background="#FFFFFF" DockPanel.Dock="Top">
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="File">
                     <MenuItem Header="_New" Command="{Binding NewFileCommand}"/>
                     <MenuItem Header="_Open..." Command="{Binding OpenFileCommand}"/>
                     <MenuItem Header="_Save" Command="{Binding SaveFileCommand}"/>
                     <MenuItem Header="_Save as..." Command="{Binding SaveFileAsCommand}" />
                     <Separator/>
-                    <MenuItem Header="Exit..." Command="{Binding ExitCommand}"/>
+                    <MenuItem Header="Exit...">
+                        <behaviors:Interaction.Triggers>
+                            <behaviors:EventTrigger EventName="Click">
+                                <behaviors:CallMethodAction MethodName="Close" 
+                                                            TargetObject="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" />
+                            </behaviors:EventTrigger>
+                        </behaviors:Interaction.Triggers>
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="Edit">
                     <MenuItem Header="_Redo"/>
