* Binding TextDecorations on the InputTextBox in the MainWindowViewModel.xaml.   * This text decorations shows the text with the underline or striketrought text styles if the user selected these styles from the font dialog window.   * Added the necessary new properties for the necessary models.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -149,6 +149,7 @@
                      FontSize="{Binding InputTextBox.FontOptions.FontSize, Mode=OneWay}"
                      FontStyle="{Binding InputTextBox.FontOptions.FontStyle, Mode=OneWay}"
                      FontWeight="{Binding InputTextBox.FontOptions.FontWeight, Mode=OneWay}"
+                     TextDecorations="{Binding InputTextBox.FontOptions.TextDecorations, Mode=Oneway}"
                      textBoxBehaviors:SelectedTextBehavior.SelectedText="{Binding InputTextBox.SelectedText}"
                      textBoxBehaviors:CaretIndexBehavior.CaretIndex="{Binding InputTextBox.CaretIndex}">
             </TextBox>
