* Refactor:   * Registered every ViewModel in the DI Container, so if you need a new view model, can you injected the target model into the source model constructor. It's important that every view model registered as transient.   * The AddTransientServices(), AddSingletonServices(), AddScopedServices() methods were broken down into smaller units like AddWindows(),  AddViewModels(), AddDialogs(), AddMemoryCache(), AddCacheServices(), AddFileReaders(), AddFileWriters().   * Removed the RelayCommandAsync class and created the AsyncCommandBase class. You can create ClassCommands with this Base class so you can separate files every command. This will make the view model much clearer.   * Removed the OnContentChangedEventHandler delegate and event from the InputTextBoxViewModel because you can injected the IDocInfoService this modell, so you can use the callback method logic here.   * Renamed the FontOptionsViewModel to TextOptionsViewModel.   * Removed the business logic from the FontOptions modell, and moved these logics into the FontDialog class as private helper methods.   * Removed the business logic from the FontResult modell, and moved these logics into the FontsCommand class as prive helper methods.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -145,11 +145,11 @@
                      VerticalScrollBarVisibility="Visible"
                      HorizontalScrollBarVisibility="Visible"
                      Text="{Binding InputTextBox.Content, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     FontFamily="{Binding InputTextBox.FontOptions.FontFamily, Mode=OneWay}"
-                     FontSize="{Binding InputTextBox.FontOptions.FontSize, Mode=OneWay}"
-                     FontStyle="{Binding InputTextBox.FontOptions.FontStyle, Mode=OneWay}"
-                     FontWeight="{Binding InputTextBox.FontOptions.FontWeight, Mode=OneWay}"
-                     TextDecorations="{Binding InputTextBox.FontOptions.TextDecorations, Mode=Oneway}"
+                     FontFamily="{Binding InputTextBox.TextOptions.FontFamily, Mode=OneWay}"
+                     FontSize="{Binding InputTextBox.TextOptions.FontSize, Mode=OneWay}"
+                     FontStyle="{Binding InputTextBox.TextOptions.FontStyle, Mode=OneWay}"
+                     FontWeight="{Binding InputTextBox.TextOptions.FontWeight, Mode=OneWay}"
+                     TextDecorations="{Binding InputTextBox.TextOptions.TextDecorations, Mode=Oneway}"
                      textBoxBehaviors:SelectedTextBehavior.SelectedText="{Binding InputTextBox.SelectedText}"
                      textBoxBehaviors:CaretIndexBehavior.CaretIndex="{Binding InputTextBox.CaretIndex}">
             </TextBox>
