* Add new property to the FontDialogOptions: ShowColor.   * If this property enabled that you can select a font color from the font dialog options. The selected color will be set on the input text box.   * Created the necessarry properties on the FontOptions and FontResult models.   * Created the necessarry property on the TextOptionsViewModel for the foreground color binding.   * Created the necessary mappers in the FontsCommand and FontDialog.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -150,6 +150,7 @@
                      FontStyle="{Binding InputTextBox.TextOptions.FontStyle, Mode=OneWay}"
                      FontWeight="{Binding InputTextBox.TextOptions.FontWeight, Mode=OneWay}"
                      TextDecorations="{Binding InputTextBox.TextOptions.TextDecorations, Mode=Oneway}"
+                     Foreground="{Binding InputTextBox.TextOptions.Foreground, Mode=OneWay}"
                      textBoxBehaviors:SelectedTextBehavior.SelectedText="{Binding InputTextBox.SelectedText}"
                      textBoxBehaviors:CaretIndexBehavior.CaretIndex="{Binding InputTextBox.CaretIndex}">
             </TextBox>
