* Created SelectionLength TextBox Behavior. This behavior provides an opportunity binding the SelectionLength property in the TextBox control.   * Created SelectionLength property into InputTextBoxViewModel and binded that in MainWindow.xaml.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -155,7 +155,8 @@
                      Foreground="{Binding InputTextBox.TextOptions.Foreground, Mode=OneWay}"
                      Background="{Binding InputTextBox.Background, Mode=OneWay}"
                      textBoxBehaviors:SelectedTextBehavior.SelectedText="{Binding InputTextBox.SelectedText}"
-                     textBoxBehaviors:CaretIndexBehavior.CaretIndex="{Binding InputTextBox.CaretIndex}">
+                     textBoxBehaviors:CaretIndexBehavior.CaretIndex="{Binding InputTextBox.CaretIndex}"
+                     textBoxBehaviors:SelectionLengthBehavior.SelectionLength="{Binding InputTextBox.SelectionLength}">
             </TextBox>
         </DockPanel>
 
